--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,9 @@ header{
     border-radius: 0%;
     border: 0px;
 }
+.navbar-brand img{
+    width: 80px;
+}
 
 /* footer */
 footer {
@@ -230,4 +233,154 @@ footer img {
     font-size: 30px;
     font-family: "texto";
     text-align: center;
+}
+
+/*Cabecera Paginas*/
+.cabecera{
+    height: 55vh;
+    background-size:cover;
+    background-position:center;
+    background-repeat:no-repeat;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    border-bottom: 2px solid black;
+    opacity: 80%;
+}
+.cabecera h1{
+    color: white;
+    font-family: "titulo";
+    font-size: 60px;
+}
+.cabecera h2{
+    color: white;
+    font-family: "subtitulo";
+    text-align: center;
+    font-size: 30px;
+    margin: 5px 100px;
+}
+@media (max-width: 1000px) {
+    .cabecera h1{
+        font-size: 50px;
+    }
+    .cabecera h2{
+        font-size: 20px;
+    }
+}
+
+@media (max-width: 700px) {
+    .cabecera h1{
+        font-size: 40px;
+    }
+    .cabecera h2{
+        font-size: 16px;
+    }
+}
+
+@media (max-width: 400px) {
+    .cabecera h1{
+        font-size: 30px;
+    }
+}
+
+/*Portfolio*/
+.portfolio1{
+    background-image: url('../images/portfolio/portfolioFondo.JPG');
+}
+
+@media (max-width: 1000px) {
+    .portfolio2{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .portfolio2 .card{
+        width: 80vw;
+    }
+}
+
+/*Paginas Portfolio*/
+.paginas_portfolio-bodas{
+    background-image: url('../images/bodas/bodasFondo.JPG');
+}
+.paginas_portfolio-grilla{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: auto;
+    grid-template-areas: 
+        "b1 b2 b2 b12"
+        "b1 b4 b4 b12"
+        "b11 b11 b3 b3"
+        "b11 b11 b8 b7"
+        "b5 b5 b6 b6"
+        "b9 b10 b10 b13"
+        "b15 b15 b17 b17"
+        "b16 b16 b17 b17"
+        "b14 b14 b18 b18"
+        "b19 b19 b19 b19";
+    margin: 5px 0px;
+}
+.paginas_portfolio-grilla img{
+    object-fit: cover;
+    width:100%;
+    height:100%;
+}
+.paginas_portfolio-grilla1{
+    grid-area: b1;
+}
+.paginas_portfolio-grilla2{
+    grid-area: b2;
+}
+.paginas_portfolio-grilla3{
+    grid-area: b3;
+}
+.paginas_portfolio-grilla4{
+    grid-area: b4;
+}
+.paginas_portfolio-grilla5{
+    grid-area: b5;
+}
+.paginas_portfolio-grilla6{
+    grid-area: b6;
+}
+.paginas_portfolio-grilla7{
+    grid-area: b7;
+}
+.paginas_portfolio-grilla8{
+    grid-area: b8;
+}
+.paginas_portfolio-grilla9{
+    grid-area: b9;
+}
+.paginas_portfolio-grilla10{
+    grid-area: b10;
+}
+.paginas_portfolio-grilla11{
+    grid-area: b11;
+}
+.paginas_portfolio-grilla12{
+    grid-area: b12;
+}
+.paginas_portfolio-grilla13{
+    grid-area: b13;
+}
+.paginas_portfolio-grilla14{
+    grid-area: b14;
+}
+.paginas_portfolio-grilla15{
+    grid-area: b15;
+}
+.paginas_portfolio-grilla16{
+    grid-area: b16;
+}
+.paginas_portfolio-grilla17{
+    grid-area: b17;
+}
+.paginas_portfolio-grilla18{
+    grid-area: b18;
+}
+.paginas_portfolio-grilla19{
+    grid-area: b19;
 }
