--- a/css/style.css
+++ b/css/style.css
@@ -462,3 +462,64 @@ footer img {
         font-size: 20px;
     }
 }
+
+/*Contacto*/
+.contacto{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-image: url('../images/contacto/contactoFondo.JPG');
+    background-size:cover;
+    background-position:center;
+    background-repeat:no-repeat;
+}
+.contacto h1{
+    font-size: 50px;
+    font-family: "titulo";
+    padding: 10px 0px;
+}
+.contacto_formulario{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.contacto_formulario input, .contacto_formulario textarea{
+    width: 80vw;
+    margin: 5px 0px;
+    border: 1.5px solid black;
+    font-size: 25px;
+    font-family: "texto";
+    color: black;
+    padding: 10px;
+    opacity: 90%;
+}
+.contacto_formulario button{
+    border: 2px solid black;
+    font-size: 35px;
+    font-family: "subtitulo";
+    padding: 5px 40px;
+    background-color: rgba(255, 255, 255, 0.857);
+    margin: 5px 0px;
+}
+@media (max-width: 1000px){
+    .contacto h1{
+        font-size: 40px;
+    }
+    .contacto_formulario input, .contacto_formulario textarea{
+        font-size: 20px;
+    }
+    .contacto_formulario button{
+        font-size: 25px;
+    }
+}
+@media (max-width: 400px){
+    .contacto h1{
+        font-size: 30px;
+    }
+    .contacto_formulario input, .contacto_formulario textarea{
+        font-size: 16px;
+    }
+    .contacto_formulario button{
+        font-size: 20px;
+    }
+}
