--- a/css/style.css
+++ b/css/style.css
@@ -523,3 +523,35 @@ footer img {
         font-size: 20px;
     }
 }
+
+/*Testimonios*/
+.testimonios1{
+    background-image: url('../images/testimonios/testimoniosFondo.JPG');
+}
+.testimonios2{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 10px 100px;
+}
+.testimonios2_caja{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 20px 5px;
+}
+.testimonios2_caja-img img{
+    height: 400px;
+}
+.testimonios2_caja-texto{
+    padding: 0px 40px;
+}
+.testimonios2_caja-texto h3{
+    font-family: "titulo";
+    font-size: 40px;
+}
+.testimonios2_caja-texto p{
+    font-family: "texto";
+    font-size: 20px;
+}
