--- a/scss/secciones/_footer.scss
+++ b/scss/secciones/_footer.scss
@@ -6,7 +6,7 @@ footer {
     grid-template-rows: auto;
     grid-template-areas: 
         "redes texto contacto";
-    height: 50px;
+    height: auto;
     .footer_redes {
         grid-area: redes;
         align-self: center;
@@ -15,14 +15,21 @@ footer {
         flex-direction: column;
         align-items: flex-start;
         padding-left: 20px;
+        a{
+            img{
+                width: 30px;
+            }
+        }
     }
     .footer_texto {
         grid-area: texto;
-        align-self: center;
-        justify-self: center;
+        display: flex;
+        align-items: center;
+        justify-content: center;
         p{
             font-family: "texto";
             text-align: center;
+            margin-bottom: 0;
         }
     }
     .footer_contacto{
@@ -38,10 +45,10 @@ footer {
             display: flex;
             flex-direction: row;
             align-items: center;
+            img{
+                width: 30px;
+            }
         }
-    }
-    img{
-        width: 30px;
     }
 }
 
