--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,6 +7,7 @@
 @import "../scss/secciones/footer";
 
 @import "../scss/secciones/index";
+@import "../scss/secciones/sobre-mi";
 
 /* Cartas Portfolio*/
 .cards{
@@ -173,84 +174,6 @@
 }
 .paginas_portfolio-grilla19{
     grid-area: b19;
-}
-
-/* Sobre Mi­*/
-.sobreMi{
-    margin-bottom: 10px;
-}
-.sobreMi_titulo{
-    display: flex;
-    justify-content: center;
-    padding: 5px 0px;
-}
-.sobreMi_titulo h1{
-    font-size: 50px;
-    font-family: "titulo";
-}
-.sobreMi_cuerpo{
-    display: flex;
-}
-.sobreMi_cuerpo_imagen{
-    padding-right: 10px;
-    padding-left: 15px;
-}
-.sobreMi_cuerpo_imagen img{
-    width: 45vw;
-}
-.sobreMi_cuerpo_descripcion{
-    padding-right: 15px;
-    padding-left: 10px;
-    margin-bottom: 5px;
-}
-.sobreMi_cuerpo_descripcion h3{
-    font-size: 30px;
-    font-family: "subtitulo";
-}
-.sobreMi_cuerpo_descripcion h2{
-    font-size: 40px;
-    font-family: "subtitulo";
-    padding-bottom: 15px;
-}
-.sobreMi_cuerpo_descripcion p{
-    font-size: 16px;
-    font-family: "texto";
-    line-height: 22px;
-}
-@media (max-width: 1300px) {
-    .sobreMi_cuerpo{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-    .sobreMi_cuerpo_imagen img{
-        width: 600px;
-    }
-    .sobreMi_cuerpo_descripcion{
-        margin-top: 10px;
-    }
-}
-@media (max-width: 1000px){
-    .sobreMi_titulo h1{
-        font-size: 40px;
-    }
-    .sobreMi_cuerpo_descripcion h3{
-        font-size: 20px;
-    }
-    .sobreMi_cuerpo_descripcion h2{
-        font-size: 30px;
-    }
-}
-@media (max-width: 400px){
-    .sobreMi_titulo h1{
-        font-size: 30px;
-    }
-    .sobreMi_cuerpo_descripcion h3{
-        font-size: 15px;
-    }
-    .sobreMi_cuerpo_descripcion h2{
-        font-size: 20px;
-    }
 }
 
 /*Contacto*/
