--- a/css/style.css
+++ b/css/style.css
@@ -12586,30 +12586,30 @@ footer .footer_contacto a img {
   grid-area: b19;
 }
 
-/*Contacto*/
 .contacto {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-image: url("../images/contacto/contactoFondo.JPG");
+  justify-content: center;
+  background-image: url("../../images/contacto/contactoFondo.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
 }
-
 .contacto h1, .contacto .h1 {
   font-size: 50px;
   font-family: "titulo";
   padding: 10px 0px;
+  text-align: center;
+  margin-bottom: 0;
 }
-
-.contacto_formulario {
+.contacto .contacto_formulario {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 10px;
 }
-
-.contacto_formulario input, .contacto_formulario textarea {
+.contacto .contacto_formulario input, .contacto .contacto_formulario textarea {
   width: 80vw;
   margin: 5px 0px;
   border: 1.5px solid black;
@@ -12619,24 +12619,32 @@ footer .footer_contacto a img {
   padding: 10px;
   opacity: 90%;
 }
-
-.contacto_formulario button {
+.contacto .contacto_formulario button {
   border: 2px solid black;
   font-size: 35px;
   font-family: "subtitulo";
   padding: 5px 40px;
   background-color: rgba(255, 255, 255, 0.857);
   margin: 5px 0px;
+  cursor: pointer;
+  margin: auto;
+  transition: font-weight 0.1s ease-in-out;
+}
+.contacto .contacto_formulario button:hover {
+  font-weight: 800;
+}
+.contacto .contacto_formulario button:active {
+  font-weight: 800;
 }
 
 @media (max-width: 1000px) {
   .contacto h1, .contacto .h1 {
     font-size: 40px;
   }
-  .contacto_formulario input, .contacto_formulario textarea {
+  .contacto .contacto_formulario input, .contacto .contacto_formulario textarea {
     font-size: 20px;
   }
-  .contacto_formulario button {
+  .contacto .contacto_formulario button {
     font-size: 25px;
   }
 }
@@ -12644,10 +12652,10 @@ footer .footer_contacto a img {
   .contacto h1, .contacto .h1 {
     font-size: 30px;
   }
-  .contacto_formulario input, .contacto_formulario textarea {
+  .contacto .contacto_formulario input, .contacto .contacto_formulario textarea {
     font-size: 16px;
   }
-  .contacto_formulario button {
+  .contacto .contacto_formulario button {
     font-size: 20px;
   }
 }
