--- a/css/style.css
+++ b/css/style.css
@@ -12659,9 +12659,8 @@ footer .footer_contacto a img {
     font-size: 20px;
   }
 }
-/*Testimonios*/
 .testimonios1 {
-  background-image: url("../images/testimonios/testimoniosFondo.JPG");
+  background-image: url("../../images/testimonios/testimoniosFondo.jpg");
 }
 
 .testimonios2 {
@@ -12671,28 +12670,93 @@ footer .footer_contacto a img {
   justify-content: center;
   margin: 10px 100px;
 }
-
-.testimonios2_caja {
+.testimonios2 .testimonios2_caja {
   display: flex;
   flex-direction: row;
   align-items: center;
   padding: 20px 5px;
 }
-
-.testimonios2_caja-img img {
+.testimonios2 .testimonios2_caja .testimonios2_caja-img img {
   height: 400px;
 }
-
-.testimonios2_caja-texto {
+.testimonios2 .testimonios2_caja .testimonios2_caja-texto {
   padding: 0px 40px;
 }
-
-.testimonios2_caja-texto h3, .testimonios2_caja-texto .h3 {
+.testimonios2 .testimonios2_caja .testimonios2_caja-texto h3, .testimonios2 .testimonios2_caja .testimonios2_caja-texto .h3 {
   font-family: "titulo";
   font-size: 40px;
 }
-
-.testimonios2_caja-texto p {
+.testimonios2 .testimonios2_caja .testimonios2_caja-texto p {
   font-family: "texto";
   font-size: 20px;
+}
+
+@media (max-width: 1000px) {
+  .testimonios2 {
+    margin: 10px 50px;
+  }
+  .testimonios2 .testimonios2_caja .testimonios2_caja-texto {
+    padding: 0px 30px;
+  }
+  .testimonios2 .testimonios2_caja .testimonios2_caja-texto h3, .testimonios2 .testimonios2_caja .testimonios2_caja-texto .h3 {
+    font-size: 30px;
+  }
+  .testimonios2 .testimonios2_caja .testimonios2_caja-texto p {
+    font-size: 16px;
+  }
+}
+@media (max-width: 800px) {
+  .testimonios2 {
+    width: 600px;
+    margin: auto;
+  }
+  .testimonios2 .testimonios2_caja {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px 0px 10px 0px;
+  }
+  .testimonios2 .testimonios2_caja .testimonios2_caja-img img {
+    height: 400px;
+    width: 600px;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+  .testimonios2 .testimonios2_caja .testimonios2_caja-img .testimonios2_caja-img-desktop {
+    display: none;
+  }
+  .testimonios2 .testimonios2_caja .testimonios2_caja-texto {
+    padding: 10px 0px 0px 0px;
+  }
+  .testimonios2 .testimonios2_caja .testimonios2_caja-texto h3, .testimonios2 .testimonios2_caja .testimonios2_caja-texto .h3 {
+    font-size: 25px;
+  }
+}
+@media (min-width: 801px) {
+  .testimonios2 .testimonios2_caja .testimonios2_caja-img .testimonios2_caja-img-mobile {
+    display: none;
+  }
+}
+@media (min-width: 650px) {
+  .testimonios1 {
+    background-image: url("../../images/testimonios/testimoniosFondo-xl.jpg");
+  }
+}
+@media (max-width: 650px) {
+  .testimonios2 {
+    width: 400px;
+  }
+  .testimonios2 .testimonios2_caja .testimonios2_caja-img img {
+    height: 300px;
+    width: 400px;
+  }
+}
+@media (max-width: 450px) {
+  .testimonios2 {
+    width: 300px;
+  }
+  .testimonios2 .testimonios2_caja .testimonios2_caja-img img {
+    height: 200px;
+    width: 300px;
+  }
 }/*# sourceMappingURL=style.css.map */
